fix(ui): align pages with sidebar shell

--- a/frontend/src/app/features/author-browser/components/author-browser/author-browser.component.scss
+++ b/frontend/src/app/features/author-browser/components/author-browser/author-browser.component.scss
@@ -176,12 +176,10 @@
 
 .author-grid {
   display: grid;
-  gap: 1.25rem;
+  justify-content: center;
   place-items: start center;
   width: 100%;
   padding-top: 1rem;
-  padding-right: 2.1rem;
-  padding-left: 2.1rem;
   box-sizing: border-box;
 }
 
